[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sqlalchemy-sql-on-fhir"
version = "0.1.0"
description = "SQLAlchemy dialect and Superset engine spec for SQL on FHIR servers"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28",
    "sqlalchemy>=1.4",
    "sqlglot>=20.0",
]

[project.optional-dependencies]
superset = [
    "apache-superset",
]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "responses>=0.23",
]

[project.entry-points."sqlalchemy.dialects"]
sqlonfhir = "sqlonfhir.sqlalchemy.dialect:SqlOnFhirDialect"

[project.entry-points."superset.db_engine_specs"]
sqlonfhir = "sqlonfhir.superset.engine_spec:SqlOnFhirEngineSpec"

[tool.hatch.build.targets.wheel]
packages = ["src/sqlonfhir"]
